--- a/effectiveness/batch_transfer.tex
+++ b/effectiveness/batch_transfer.tex
@@ -1,4 +1,4 @@
-\subsection*{Batch Data Transfer}
+\subsection{Batch Data Transfer}
 We grouped together the data transfer of eight different arrays:
 \begin{verbatim}
 size_t* NNListIndex
