--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -1,4 +1,4 @@
-\section*{Effectiveness}
+\section{Effectiveness}
 Experimentally we will run our results three times and average them to deduce what effect they have on the benchmark.
 \input{effectiveness/original}
 \input{effectiveness/gpu}
