--- a/effectiveness/gpu.tex
+++ b/effectiveness/gpu.tex
@@ -1,5 +1,7 @@
-\subsection*{GPU}
+\subsection{GPU}
 Once the vertices have been coloured and the code migrated to the GPU results we see are as follows.\\
+PERHAPS MENTION ABOUT FLOATING/DOUBLE BUG AND HOW WE TRACKED IT DOWN?
+
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
   Size & Average Over Three Time (s) \\
