--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -1,4 +1,4 @@
-\subsection*{Original Code}
+\subsection{Original Code}
 The original code can be run on lab machines and gives the following results.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
