--- a/effectiveness/pinning.tex
+++ b/effectiveness/pinning.tex
@@ -1,4 +1,4 @@
-\subsection*{Pin data for transfer}
+\subsection{Pin data for transfer}
 With a pinning pre-processing step (which simulates the host always using pinned data), we avoid the cost of of the transfer between pageable and pinned host memory and see the following speed up.
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
