--- a/effectiveness/reordering.tex
+++ b/effectiveness/reordering.tex
@@ -1,4 +1,4 @@
-\subsection*{Reordering the colours}
+\subsection{Reordering the colours}
 We then reordered the colours into an ordering based upon neighbour size and observed the following results\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
