--- a/effectiveness/thread_size.tex
+++ b/effectiveness/thread_size.tex
@@ -1,4 +1,4 @@
-\subsection*{Threads Per Block}
+\subsection{Threads Per Block}
 We experimented with multiples of the warp size as the number of threads to find the sweet spot. We plotted our results for small and medium data sizes on the graph below:
 
 \begin{figure}[H]
