--- a/introduction/hardware.tex
+++ b/introduction/hardware.tex
@@ -1,6 +1,5 @@
-\subsubsection*{Hardware}
-\paragraph{Labs}
-  The lab machines we ran our code on have an Intel Core i5 650 3.2GHz processor and a  GeForce GT 330 CUDA enabled graphics card with compute capability 1.0. This means that a multiprocessor consists of\cite{compute_1.0}:
+\subsubsection{Hardware}
+  The lab machine we ran our code on has an Intel Core i5 650 3.2GHz processor and a GeForce GT 330 CUDA enabled graphics card with compute capability 1.0. This means that a multiprocessor consists of\cite{compute_1.0}:
   \begin{itemize}
     \item 8 CUDA cores for arithmetic operations
     \item 2 special function units for single-precision floating-point transcendental functions (these units can also handle single-precision floating-point multiplications)
