--- a/introduction/background.tex
+++ b/introduction/background.tex
@@ -1,5 +1,5 @@
 We have been provided with a piece of code that concerns a computational kernel extracted from a research project at Imperial College London on dynamic mesh adaptation\cite{pragmatic}.
-The aim of this series of experiments was to figure out how to run this program as fast as possible on a given architecture.
+The aim of this series of experiments is to figure out how to run this program as fast as possible on a given architecture.
 
 We have been given access to the HPC's PC cluster to run the results of our experiment on.
-Since the HPC system uses the PBS Pro queueing system to manage the execution of jobs on the compute resources it can often take some time to run a single result. The wait times can be up to twenty minutes for a single job and unfortunately we have deemed it infeasible to develop for cx1. We will therefore optimise for the lab machine detailed in further sections.
+Unfortunately since the HPC system uses the PBS Pro queueing system to manage the execution of jobs on the compute resources it can often take some time to run a single result. The wait times can be up to twenty minutes for a single job and sadly this has made it infeasible to develop for cx1. We will therefore optimise for the lab machine detailed in further sections.
