--- a/introduction/software.tex
+++ b/introduction/software.tex
@@ -1,11 +1,10 @@
-\subsubsection*{Software}
+\subsubsection{Software}
 The software we have made use of on both lab machines and cx1 are:
 \begin{itemize}
   \item \textbf{NVIDIA CUDA Compiler (NVCC)} which deals with the compilation and transfer of CUDA code. The code is divided into CPU-bound and GPU-bound code, delegating the compilation of the former to a C/C++ compiler, and compiling the latter. Finally, the compiled binaries are transferred to their respective destinations.
-  \item \textbf{CUDA Command Line Profiler}
-  \item \textbf{Gprof} for profiling functions run on the CPU, and exposing potential for parallelism.
+  \item \textbf{CUDA Command Line Profiler} for measuring GPU performance at a higher detail in order to reason about results.
   \item \textbf{Python} for writing scripts to analyse both profiled results and benchmark scores, performing database operations, and assist in running commands remotely.
-  \item \textbf{Bash}, similarly, for writing scripts to perform database operations, and automating experiment runs.
-  \item \textbf{cuda-gdb} used for debugging CUDA code.
-  \item \textbf{cuda-memcheck} is a good complement to \textbf{cuda-gdb}, particularly useful for diagnosing illegal memory accesses.
+  \item \textbf{Bash} for writing scripts to perform database operations, and automating experiment runs.
+  \item \textbf{cuda-gdb} for debugging CUDA code.
+  \item \textbf{cuda-memcheck} is a good complement to cuda-gdb, and is particularly useful for diagnosing illegal memory accesses.
 \end{itemize}
