--- a/hypothesis/migration.tex
+++ b/hypothesis/migration.tex
@@ -1,4 +1,4 @@
-\subsection{Migration to GPU}
+\subsection{Migration to GPU} \label{sec:migration}
 In order to run the code on the GPU we must serialise 2D data structures. For example consider a vector of vectors:
 \begin{verbatim}
   std::vector< std::vector<size_t> > colours = {[1, 5, 9, 2],
