Comment out potential advantage section

--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 
 \input{introduction/introduction}
 \input{hypothesis/hypothesis}
-\input{potential_advantage/advantage}
+% \input{potential_advantage/advantage}
 \input{effectiveness/effectiveness}
 \input{conclusions/conclusions}
 \input{group_work/group_work}
