--- a/effectiveness/effectiveness.tex
+++ b/effectiveness/effectiveness.tex
@@ -1,5 +1,5 @@
-\section{Effectiveness}
-Experimentally we will run our results three times and average them to deduce what effect they have on the benchmark.
+\section{Results}
+Experimentally we will run our algorithm three times and average the benchmark times to deduce what effect each optimisation has on the performance of the program.
 \input{effectiveness/original}
 \input{effectiveness/gpu}
 \input{effectiveness/remove_corner_nodes}
