--- a/effectiveness/original.tex
+++ b/effectiveness/original.tex
@@ -1,5 +1,5 @@
 \subsection{Original Code}
-The original code can be run on lab machines and gives the following results.\\
+Running the original code yields the following results.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l }
   \hline
   Size & Average Over Three Time (s) \\
@@ -10,4 +10,4 @@ The original code can be run on lab machines and gives the following results.\\
   \hline
 \end{tabular} \end{figure}
 
-The is a good benchmark for us to work on and will be used in the final results to assess our overall speedup.
+This is a good benchmark for us to work from and will be used in the final results to assess our overall speedup.
