--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -25,6 +25,8 @@
   \begin{itemize}
     \item Implemented a SQLite 3 database for result storage.
     \item Contributed to implementing batch data transfer from host to device.
+    \item Wrote useful bash and Python scripts for running experiments and interfacing with the database.
+    \item Debugged bugs related to memory access and transfer.
   \end{itemize} \\
   \hline
 \end{tabular}
