Removing corner nodes expl

--- a/effectiveness/remove_corner_nodes.tex
+++ b/effectiveness/remove_corner_nodes.tex
@@ -10,7 +10,9 @@ We first remove corner nodes to try reduce the branching amount, although we do 
   \hline
 \end{tabular} \end{figure}
 
-The results from this run show that it makes a large difference to the time in which the smoothing takes to run for both the medium and small meshes. This can be explained because we are reducing the number of threads in a warp meaning that the GPU should have less warps to process. With less warps each warp will be scheduled more often and so the program will finish faster. Furthermore because there is no branch prediction or speculation on a GPU if the warp had contained any corner nodes then these would also run the entire smoothing algorithm too, wasting precious GPU resources. Now we have removed them we can be sure that only the vertices that need smoothing will be run.
+The results from this run show that it makes a large difference to the time in which the smoothing takes to run for both the medium and small meshes. This can be explained because we are reducing the number of threads overall meaning that the GPU should have less warps to process.  With less warps, each warp will be scheduled more often and so the program will finish faster. Of course if there were not enough warps, then the performance would drop (section \ref{sec:thread_size}), but this is not the case here.
+
+Furthermore because there is no branch prediction or speculation on a GPU if the warp had contained any corner nodes then these would also run the entire smoothing algorithm too, wasting precious GPU resources. Now we have removed them we can be sure that only the vertices that need smoothing will be run.
 The only exception is the final warp where the \verb!threadID >= NNodesInSet!
 us GPU resources.
 With the removal of them we can focus the resources on vertices that actually require smoothing.
@@ -35,6 +37,5 @@ instructions & 38571.64 & 5167.00 & 80180.00 \\
 \hline
 \end{tabular} \end{figure}
 
-Although this looks to have not reduced the number of divergent branches, this is likely to come from the fact that we now have less warps. [TODO EXPLAIN PROFILER RESULTS]
-
-Often loops are biased so doesn't make too much difference..[EXPLAIN THIS]
+Although this looks to have not improved overall, this is likely to come from the fact that we now have less warps. Where originally warps diverged on the \verb!if(isCornerNode(vid))! statement, they may now diverge later on and thus require more instructions, loads etc.
+We would require more advanced profiler options to further investigate the cause of these results, but unfortunately this is for compute capacity 2.0 and up. It should be worth noting that the visual profiler, which is now preferred by the CUDA community, is only available for CUDA Toolkit 5.0 and is not available on lab machines.
