--- a/introduction/software.tex
+++ b/introduction/software.tex
@@ -1,6 +1,7 @@
 \subsubsection{Software}
-The software we have made use of on both lab machines and cx1 are:
+The software we have made use of on the lab machine is.
 \begin{itemize}
+  \item \textbf{CUDA Toolkit 4.2} which provides a comprehensive development environment for C and C++ developers building GPU-accelerated applications.
   \item \textbf{NVIDIA CUDA Compiler (NVCC)} which deals with the compilation and transfer of CUDA code. The code is divided into CPU-bound and GPU-bound code, delegating the compilation of the former to a C/C++ compiler, and compiling the latter. Finally, the compiled binaries are transferred to their respective destinations.
   \item \textbf{CUDA Command Line Profiler} for measuring GPU performance at a higher detail in order to reason about results.
   \item \textbf{Python} for writing scripts to analyse both profiled results and benchmark scores, performing database operations, and assist in running commands remotely.
