--- a/effectiveness/reordering.tex
+++ b/effectiveness/reordering.tex
@@ -10,7 +10,7 @@ We then reordered the colours into an ordering based upon neighbour size and obs
   \hline
 \end{tabular} \end{figure}
 
-These results were surprising since they have negatively impacted the speed of the smoothing algorithm. In order to understand what is happening we profiled the algorithm for small.vtk and obtained the following results:\\
+These results were surprising since they have negatively impacted the speed of the smoothing algorithm. In order to understand what is happening we profiled the algorithm for \texttt{small.vtu} and obtained the following results:\\
 
 \begin{figure}[H]\centering \begin{tabular}{ l | l | l | l}
 \hline
