--- a/effectiveness/remove_corner_nodes.tex
+++ b/effectiveness/remove_corner_nodes.tex
@@ -17,7 +17,7 @@ The only exception is the final warp where the \verb!threadID >= NNodesInSet!
 us GPU resources.
 With the removal of them we can focus the resources on vertices that actually require smoothing.
 
-We then profile for small.vtk to see what effect this has made.\\
+We then profile for \texttt{small.vtu} to see what effect this has made.\\
 \begin{figure}[H]\centering \begin{tabular}{ l | l | l | l}
 \hline
 Test & Average & Min & Max \\
